--- a/PRACTICAS_OBLIGATORIAS/Jose_Manuel_Morales_Practica_Python (1).ipynb
+++ b/PRACTICAS_OBLIGATORIAS/Jose_Manuel_Morales_Practica_Python (1).ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "797c3ca1-6b90-4b05-8ca5-cb49cca5fd7c",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
       "Máximo: 5\n",
       "Mínimo: 2\n",
       "Suma total: 9\n",
-      "¿El máximo menos el mínimo es igual a la suma total dividida entre 5? → False\n"
+      "El número máximo menos el número mínimo es igual a la suma total dividida por 5 → False\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
     "print(f\"Máximo: {maximo}\")\n",
     "print(f\"Mínimo: {minimo}\")\n",
     "print(f\"Suma total: {suma_total}\")\n",
-    "print(f\"¿El máximo menos el mínimo es igual a la suma total dividida entre 5? → {comprobacion}\")\n"
+    "print(f\"El número máximo menos el número mínimo es igual a la suma total dividida por 5 → {comprobacion}\")\n"
    ]
   },
   {
